--- a/views/adminEnquiryStudentList.ejs
+++ b/views/adminEnquiryStudentList.ejs
@@ -65,9 +65,24 @@
         <div class="row mb-5 justify-content-center">
           <div class="col-lg-12 text-center"  data-aos="fade-up" data-aos-delay="">
             <br>
-            <h3>Enquired Student List</h3>
+            <h4>Enquired Student List</h4>
+            <center>
+              <span style="color:green"><%=message%></span>
+            </center>
             <br>
-            <span style="color:green"><%=message%></span>
+<!-- for downloading excel designing logic starts -->
+            <form id="download-form" method="GET" action="/admin/download-excel">
+              <label for="fromDate">From:</label>
+              <input type="date" id="fromDate" name="fromDate" required>
+          
+              <label for="toDate">To:</label>
+              <input type="date" id="toDate" name="toDate" required>
+          
+              <button type="submit" class="btn btn-success text-white p-2">Download Excel</button>
+            </form>
+<!-- for downloading excel designing logic ends -->
+
+            <br>
             <table class="table" style="font-size: 14px;">
                 <thead>
                   <tr>
@@ -101,6 +116,7 @@
                         <td>
                           <form action="/admin/adminSendSyllabus" method="post" enctype="multipart/form-data"> 
                             <input type="hidden" name="email" id="email" value="<%=enqStudent.email%>">
+                            <input type="hidden" name="enquiryTime" id="enquiryTime" value="<%=enqStudent.enquiryTime%>">
                             <div class="form-group mb-4">
                               <select required name="syllabus" id="syllabus" class="form-control">
                                 <option value="">Select Subject</option>
