--- a/views/addBatch.ejs
+++ b/views/addBatch.ejs
@@ -47,7 +47,7 @@
             <div class="site-logo mr-auto"><a href="index.html">EduSphere</a></div>
             <div>
               <nav class="site-navigation position-relative text-right" role="navigation">
-                <%-include('./adminHomeHeader.js')%>
+                <%-include('./employeeMgmtHomeHeader.js')%>
               </nav>
              <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right">
               <span class="icon-menu h3"></span></a>
@@ -58,47 +58,82 @@
         
       </header>
 
-    
-    <div class="site-section" id="teachers-section" style="margin-top: -1px;">
-      <div class="container">
-
-        <div class="row mb-5 justify-content-center">
-          <div class="col-lg-7 mb-5 text-center"  data-aos="fade-up" data-aos-delay="">
-            <br><br>
-            <h2 class="text-black">Our Students</h2>
-          </div>
-        </div>
-
-        <div class="row">
-
-          <div class="col-md-6 col-lg-6 mb-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="teacher text-center">
-              <a href="/admin/enquiryStudentList">
-              <img src="images/enquiry.jpg" alt="Image" class="img-fluid w-50 rounded-circle mx-auto mb-4">
-              <div class="py-2">
-                <h2 class="text-black">Enquired Students</h2>
-                <!-- <p class="position">Physics Teacher</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro eius suscipit delectus enim iusto tempora, adipisci at provident.</p> -->
-              </div>
-              </a>
+      <div class="site-section" id="courses-section" style="margin-top: -1px;">
+        <br>
+        <div class="container">
+          <div class="row mb-5 justify-content-center">
+            <div class="col-lg-7 text-center"  data-aos="fade-up" data-aos-delay="">
+                <br>
+              <h4 class="text-black">Batch Section</h4>
+              <span><%=message%></span>
             </div>
           </div>
+          <div class="row mb-5 align-items-center">
+            
+            <div class="col-lg-6 mb-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
+              <img src="images/undraw_teaching.svg" alt="Image" class="img-fluid">
+              <form action="">
+                <div class="form-group">
+                  <input type="submit" class="btn btn-primary btn-block" value="View Batches">
+                </div>
+              </form>  
 
-          <div class="col-md-6 col-lg-6 mb-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="teacher text-center">
-              <a href="/admin/existingStudentList">
-              <img src="images/existing.jpg" alt="Image" class="img-fluid w-50 rounded-circle mx-auto mb-4">
-              <div class="py-2">
-                <h2 class="text-black">Existing Student</h2>
-                <!-- <p class="position">Physics Teacher</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro eius suscipit delectus enim iusto tempora, adipisci at provident.</p> -->
+            </div>
+  
+            <div class="col-lg-5 mr-auto order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+              <div>
+                <!-- Admin Add Course -->
+                <form action="/employee/addBatch" method="post" class="form-box">
+                  <h3 class="h4 text-black mb-4">
+                    Add Batch
+                  </h3>
+                  <div class="form-group mb-4">
+                    <select name="courseId" id="courseId" class="form-control">
+                      <option value="">Select Course</option>
+                      <%courseArrObj.forEach((obj)=>{%>
+                        <option value="<%=obj.courseId%>"><%=obj.courseName%></option>
+                      <%})%>
+                    </select>
+                  </div>
+                  Batch Start Date
+                  <div class="form-group">
+                    <input type="date" name="startDate" id="startDate" class="form-control">
+                  </div>
+                  Batch Start Time
+                  <div class="form-group">
+                    <input type="text" name="startTime" placeholder="00:00 AM | PM" id="startTime" class="form-control">
+                  </div>
+                  Batch End Time
+                  <div class="form-group">
+                    <input type="text" name="endTime" placeholder="00:00 AM |PM" id="endTime" class="form-control">
+                  </div>
+
+                  <div class="form-group mb-4">
+                    <select name="batchDuration" id="batchDuration" class="form-control">
+                      <option value="">Select Batch Duration</option>
+                      <option value="1 Month">1 Month</option>
+                      <option value="2 Months">2 Months</option>
+                      <option value="3 Months">3 Months</option>
+                      <option value="6 Months">6 Months</option>
+                      <option value="1 Year">1 Year</option>
+                    </select>
+                  </div>
+                  
+                  <div class="form-group">
+                    <input type="submit" class="btn btn-primary btn-block" value="Add Batch">    
+                </div>
+
+                </form>
               </div>
-              </a>
+              
             </div>
           </div>
+  
+        
+  
         </div>
       </div>
-    </div>
+    
 
   
     <footer class="footer-section bg-white">
