--- a/views/adminEmployeeList.ejs
+++ b/views/adminEmployeeList.ejs
@@ -65,10 +65,10 @@
         <div class="row mb-5 justify-content-center">
           <div class="col-lg-12 text-center"  data-aos="fade-up" data-aos-delay="">
             <br>
-            <h2>Employee List</h2>
+            <h4 class="text-black">Employee List</h4>
             <br>
             <span style="color:green"><%=message%></span>
-            <table class="table" style="font-size: 12px;">
+            <table class="table" style="font-size: 12px; color: black;">
                 <thead>
                   <tr>
                     <th scope="col">Name</th>
