--- a/views/adminUploadSyllabus.ejs
+++ b/views/adminUploadSyllabus.ejs
@@ -100,8 +100,8 @@
                 <div class="form-group mb-4">
                   <select required name="subject" id="subject" class="form-control">
                     <option value="">Select Subject</option>
-                    <% result.forEach((course)=>{ %>
-                      <option value="<%=course.courseName%>"><%=course.courseName%></option>  
+                    <% result.forEach((courseName)=>{ %>
+                      <option value="<%=courseName%>"><%=courseName%></option>  
                     <% }) %>
                   </select>
                 </div>
