--- a/views/assignmentForm.ejs
+++ b/views/assignmentForm.ejs
@@ -39,7 +39,7 @@
       <div class="site-mobile-menu-body"></div>
     </div>
    
-    
+
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
       
         <div class="container-fluid">
@@ -57,70 +57,80 @@
         </div>
         
       </header>
-  
 
-    <div class="site-section" id="programs-section" style="margin-top: -1px;">
-      <br>
+      <div class="site-section" id="courses-section" style="margin-top: -1px;">
+        <br>
         <div class="container">
-        <div class="row mb-5 justify-content-center">
-          <div class="col-lg-12 text-center"  data-aos="fade-up" data-aos-delay="">
-            <br>
-            <h4 class="text-black">Employee Batch List</h4>
-            <br>
-            <span style="color:green"><%=message%></span>
-            <%if(batchesData.length==0){%>
-                <span style="color:crimson">No Record Found</span>
-            <%}else{%>
-            <table class="table" style="font-size: 12px; color: black;">
-                <thead>
-                  <tr>
-                    <th scope="col">S.No</th>
-                    <th scope="col" style="width:180px">BatchId</th>
-                    <th scope="col">CourseName</th>
-                    <th scope="col">StartDate</th>
-                    <th scope="col">StartTime</th>
-                    <th scope="col">EndTime</th>
-                    <th scope="col">Duration</th>
-                    <th scope="col">Trainer Name</th>
-                    <th scope="col">Assignment</th>
-                </tr>
-                </thead>
-                <tbody>
-                  <%batchesData.forEach((batch,index)=>{
-                    var obj = {
-                      batchId : batch.batchId,
-                      batchCourse : batch.courseName,
-                      trainerName : batch.trainerEnrollId 
-                    }
-                    %>
-                      <tr>
-                        <td><%=(index+1)%></td>
-                        <td><%=batch.batchId%></td>
-                        <td><%=batch.courseName%></td>
-                        <td><%=new Date(batch.startDate).toISOString().split("T")[0]%></td>
-                        <td><%=batch.startTime%></td>
-                        <td><%=batch.endTime%></td>
-                        <td><%=batch.batchDuration%></td>
-                        <td><%=batch.trainerEnrollId%></td>
-                        <td>
-                          <a href="/employee/assignmentForm?data=<%=JSON.stringify(obj)%>">
-                                <button class="btn btn-link p-1 btn-block ml-2 w-75"><i class="icon-upload"></i> Upload </button>
-                          </a>
-                        </td>
-                      </tr>
-                  <%})%>
-                </tbody>
-              </table>
-            <%}%>  
+          <div class="row mb-5 justify-content-center">
+            <div class="col-lg-7 text-center"  data-aos="fade-up" data-aos-delay="">
+                <br>
+              <h4 class="text-black">Assignment Section</h4>
+              <span><%=message%></span>
+            </div>
           </div>
+          <div style="margin-top: -70px;" class="row mb-5 align-items-center">
+            
+            <div class="col-lg-6 mb-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
+              <img src="images/undraw_teaching.svg" alt="Image" class="img-fluid">
+              <form action="">
+                <div class="form-group">
+                  <input type="submit" class="btn btn-primary btn-block" value="View Assignment">
+                </div>
+              </form>  
+
+            </div>
+  
+            <div class="col-lg-5 mr-auto order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+              <div>
+                <!-- Trainer Add Assignment -->
+                <form action="/assignment/addAssignment" method="post" class="form-box" enctype="multipart/form-data">
+                  <h3 class="h4 text-black mb-4">
+                    Add Assignment
+                  </h3>
+                  Batch Id
+                  <div class="form-group">
+                    <input type="text" readonly value="<%=data.batchId%>" name="batchId" id="batchId" class="form-control">
+                  </div>
+                  Course Name
+                  <div class="form-group">
+                    <input type="text" readonly value="<%=data.batchCourse%>" name="batchCourse" id="batchCourse" class="form-control">
+                  </div>
+                  Trainer's Name
+                  <div class="form-group">
+                    <input type="text" readonly value="<%=data.trainerName%>" name="trainerName" id="trainerName" class="form-control">
+                  </div>
+
+                  Assignment Allocation Date
+                  <div class="form-group">
+                    <input type="date" name="allocationDate" id="allocationDate" class="form-control">
+                  </div>
+                  Assignment Submission Date
+                  <div class="form-group">
+                    <input type="date" name="submissionDate" id="submissionDate" class="form-control">
+                  </div>
+                  
+                  Upload Assignment Doc
+                  <div class="form-group">
+                    <input type="file" name="assignmentDoc" id="assignmentDoc" class="form-control">
+                  </div>
+
+                  <div class="form-group">
+                    <input type="submit" class="btn btn-primary btn-block" value="Upload Assignment">    
+                </div>
+
+                </form>
+              </div>
+              
+            </div>
+          </div>
+  
+        
+  
         </div>
-      
-
       </div>
-    </div>
-
     
-     
+
+  
     <footer class="footer-section bg-white">
       <div class="container">
         <div class="row">
