--- a/views/assignmentForm.ejs
+++ b/views/assignmentForm.ejs
@@ -68,7 +68,7 @@
               <span><%=message%></span>
             </div>
           </div>
-          <div style="margin-top: -70px;" class="row mb-5 align-items-center">
+          <div style="margin-top: -40px;" class="row mb-5 align-items-center">
             
             <div class="col-lg-6 mb-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
               <img src="images/undraw_teaching.svg" alt="Image" class="img-fluid">
@@ -89,29 +89,29 @@
                   </h3>
                   Batch Id
                   <div class="form-group">
-                    <input type="text" readonly value="<%=data.batchId%>" name="batchId" id="batchId" class="form-control">
+                    <input type="text" readonly required value="<%=data.batchId%>" name="batchId" id="batchId" class="form-control">
                   </div>
                   Course Name
                   <div class="form-group">
-                    <input type="text" readonly value="<%=data.batchCourse%>" name="batchCourse" id="batchCourse" class="form-control">
+                    <input type="text" readonly required value="<%=data.batchCourse%>" name="batchCourse" id="batchCourse" class="form-control">
                   </div>
                   Trainer's Name
                   <div class="form-group">
-                    <input type="text" readonly value="<%=data.trainerName%>" name="trainerName" id="trainerName" class="form-control">
+                    <input type="text" readonly required value="<%=data.trainerName%>" name="trainerName" id="trainerName" class="form-control">
                   </div>
 
                   Assignment Allocation Date
                   <div class="form-group">
-                    <input type="date" name="allocationDate" id="allocationDate" class="form-control">
+                    <input type="date" required name="allocationDate" id="allocationDate" class="form-control">
                   </div>
                   Assignment Submission Date
                   <div class="form-group">
-                    <input type="date" name="submissionDate" id="submissionDate" class="form-control">
+                    <input type="date" required name="submissionDate" id="submissionDate" class="form-control">
                   </div>
                   
                   Upload Assignment Doc
                   <div class="form-group">
-                    <input type="file" name="assignmentDoc" id="assignmentDoc" class="form-control">
+                    <input type="file" required name="assignmentDoc" id="assignmentDoc" class="form-control">
                   </div>
 
                   <div class="form-group">
