--- a/views/interviewSubject.ejs
+++ b/views/interviewSubject.ejs
@@ -93,7 +93,7 @@
       <div class="container" style="padding-top: 70px;">
         <div class="row mb-5 justify-content-center">
           <div class="col-lg-7 text-center" data-aos="fade-up" data-aos-delay="">
-            <h2 class="text-white mb-4">Interview Questions</h2>
+            <h2 class="text-white mb-4">Technical Domains</h2>
           </div>
         </div>
 
@@ -105,17 +105,20 @@
         </style>
         
         <div class="row" style="margin-top: -50px;" data-aos="fade-up" data-aos-delay="">
-          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background:linear-gradient(145deg, white, #7971ea);box-shadow: 1px 1px 10px 1px; ">
-            <h5 class="text-black pt-3">
-              <img src="images/interviewlogo.jpg" style="margin-left: 16%;height: 100%; width:15%" alt="">
-              <strong>Mern Stack</strong> <br><br>
-              <p style="margin: 0% 16%;font-size: 16px;text-align:justify;">
-                Helps you to crack Interviews of any MNC and make you ready to work in Corporate Environment.
-              </p>
-              <br>
-            </h5>
-          </div>
-          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background:linear-gradient(145deg, white, #7971ea);box-shadow: 1px 1px 10px 1px;">
+            <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background-color:white;box-shadow: 1px 1px 10px 1px; ">
+              <a href="/interviewQuestions">
+              <h5 class="text-black pt-3">
+                <img src="images/interviewlogo.jpg" style="margin-left: 16%;height: 100%; width:15%" alt="">
+                <strong>Mern Stack</strong> <br><br>
+                <p style="margin: 0% 16%;font-size: 16px;text-align:justify;">
+                  Helps you to crack Interviews of any MNC and make you ready to work in Corporate Environment.
+                </p>
+                <br>
+              </h5>
+              </a>
+            </div>
+          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background-color:white;box-shadow: 1px 1px 10px 1px;">
+            <a href="/interviewQuestions">
             <h5 class="text-black pt-3">
               <img src="images/interviewlogo.jpg" style="margin-left: 16%;height: 100%; width:15%" alt="">
               <strong>Java Stack</strong> <br><br>
@@ -124,8 +127,10 @@
               </p>
               <br>
             </h5>
+            </a>
           </div>
-          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background:linear-gradient(145deg, white, #7971ea);box-shadow: 1px 1px 10px 1px;">
+          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background-color:white;box-shadow: 1px 1px 10px 1px;">
+            <a href="/interviewQuestions">
             <h5 class="text-black pt-3">
               <img src="images/interviewlogo.jpg" style="margin-left: 16%;height: 100%; width:15%" alt="">
               <strong>Python Stack</strong> <br><br>
@@ -134,8 +139,10 @@
               </p>
               <br>
             </h5>
+            </a>
           </div>
-          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background:linear-gradient(145deg, white, #7971ea);box-shadow: 1px 1px 10px 1px;">
+          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background-color:white;box-shadow: 1px 1px 10px 1px;">
+            <a href="/interviewQuestions">
             <h5 class="text-black pt-3">
               <img src="images/interviewlogo.jpg" style="margin-left: 16%;height: 100%; width:15%" alt="">
               <strong>JavaScript</strong> <br><br>
@@ -144,8 +151,10 @@
               </p>
               <br>
             </h5>
+            </a>
           </div>
-          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background:linear-gradient(145deg, white, #7971ea);box-shadow: 1px 1px 10px 1px;">
+          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background-color:white;box-shadow: 1px 1px 10px 1px;">
+            <a href="/interviewQuestions">
             <h5 class="text-black pt-3">
               <img src="images/interviewlogo.jpg" style="margin-left: 16%;height: 100%; width:15%" alt="">
               <strong>Data Science</strong> <br><br>
@@ -154,8 +163,10 @@
               </p>
               <br>
             </h5>
+            </a>
           </div>
-          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background:linear-gradient(145deg, white, #7971ea);box-shadow: 1px 1px 10px 1px;">
+          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background-color:white;box-shadow: 1px 1px 10px 1px;">
+            <a href="/interviewQuestions">
             <h5 class="text-black pt-3">
               <img src="images/interviewlogo.jpg" style="margin-left: 16%;height: 100%; width:15%" alt="">
               <strong>Data Analytics</strong> <br><br>
@@ -164,8 +175,10 @@
               </p>
               <br>
             </h5>
+            </a>
           </div>
-          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background:linear-gradient(145deg, white, #7971ea);box-shadow: 1px 1px 10px 1px;">
+          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background-color:white;box-shadow: 1px 1px 10px 1px;">
+            <a href="/interviewQuestions">
             <h5 class="text-black pt-3">
               <img src="images/interviewlogo.jpg" style="margin-left: 16%;height: 100%; width:15%" alt="">
               <strong>DSA</strong> <br><br>
@@ -174,9 +187,11 @@
               </p>
               <br>
             </h5>
+            </a>
           </div>
 
-          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background:linear-gradient(145deg, white, #7971ea);box-shadow: 1px 1px 10px 1px;">
+          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background-color:white;box-shadow: 1px 1px 10px 1px;">
+            <a href="/interviewQuestions">
             <h5 class="text-black pt-3">
               <img src="images/interviewlogo.jpg" style="margin-left: 16%;height: 100%; width:15%" alt="">
               <strong>Bootstrap</strong> <br><br>
@@ -185,9 +200,11 @@
               </p>
               <br>
             </h5>
+            </a>
           </div>
 
-          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background:linear-gradient(145deg, white, #7971ea);box-shadow: 1px 1px 10px 1px;">
+          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background-color:white;box-shadow: 1px 1px 10px 1px;">
+            <a href="/interviewQuestions">
             <h5 class="text-black pt-3">
               <img src="images/interviewlogo.jpg" style="margin-left: 16%;height: 100%; width:15%" alt="">
               <strong>HTML | CSS</strong> <br><br>
@@ -196,12 +213,9 @@
               </p>
               <br>
             </h5>
+            </a>
           </div>
-
-
-
         </div>
-
       </div>
     </div>
 
