--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -63,7 +63,15 @@
                     <span class="icon-close2 js-menu-toggle"></span>
                 </div>
             </div>
-            <div class="site-mobile-menu-body"></div>
+            <div class="">
+              <ul class="m-0 p-2">
+                <li><a href="/" class="nav-link">Home</a></li>
+                <li><a href="" class="nav-link">Courses</a></li>
+                <li><a href="/interviewSubject" class="nav-link">InterviewPrep</a></li>
+                <li><a href="/blog" class="nav-link">Blog</a></li>
+                <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li>
+              </ul>
+            </div>
         </div>
 
 
@@ -78,7 +86,7 @@
                             <ul class="site-menu main-menu js-clone-nav mx-auto d-none d-lg-block  m-0 p-0">
                                 <li><a href="#home-section" class="nav-link">Home</a></li>
                                 <li><a href="#courses-section" class="nav-link">Courses</a></li>
-                                <li><a href="#programs-section" class="nav-link">Programs</a></li>
+                                <li><a href="/interviewSubject" class="nav-link">InterviewPrep</a></li>
                                 <li><a href="/blog" class="nav-link">Blog</a></li>
                                 <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li>
                             </ul>
@@ -113,7 +121,7 @@
                 </div>
         
                 <!-- Blog Section -->
-                <div class="row">
+                <div class="row" data-aos="fade-up" data-aos-delay="">
                     <!-- Blog Post 1 -->
                     <div class="col-md-12">
                         <div class="d-flex blog-card p-3 mb-4 shadow-sm">
