--- a/views/interviewQuestions.ejs
+++ b/views/interviewQuestions.ejs
@@ -58,7 +58,15 @@
                     <span class="icon-close2 js-menu-toggle"></span>
                 </div>
             </div>
-            <div class="site-mobile-menu-body"></div>
+            <div class="">
+                <ul class="m-0 p-2">
+                  <li><a href="/" class="nav-link">Home</a></li>
+                  <li><a href="" class="nav-link">Courses</a></li>
+                  <li><a href="/interviewSubject" class="nav-link">InterviewPrep</a></li>
+                  <li><a href="/blog" class="nav-link">Blog</a></li>
+                  <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li>
+                </ul>
+              </div>
         </div>
 
 
@@ -73,7 +81,7 @@
                             <ul class="site-menu main-menu js-clone-nav mx-auto d-none d-lg-block  m-0 p-0">
                                 <li><a href="#home-section" class="nav-link">Home</a></li>
                                 <li><a href="#courses-section" class="nav-link">Courses</a></li>
-                                <li><a href="#programs-section" class="nav-link">Programs</a></li>
+                                <li><a href="/interviewSubject" class="nav-link">InterviewPrep</a></li>
                                 <li><a href="/blog" class="nav-link">Blog</a></li>
                                 <li><a href="/employee/employeeLogin" class="nav-link">Employee</a></li>
                             </ul>
