--- a/views/adminHome.ejs
+++ b/views/adminHome.ejs
@@ -70,7 +70,7 @@
                   <h1  data-aos="fade-up" data-aos-delay="100">EduSphere | Admin Panel</h1>
                   <span style="color:#7971ea"><h4 data-aos="fade-up" data-aos-delay="100"><%=message%></h4></span>
                   <p class="mb-4"  data-aos="fade-up" data-aos-delay="200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ipsa nulla sed quis rerum amet natus quas necessitatibus.</p>
-                  <p data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary py-3 px-5 btn-pill">Unlock the Mystry of Coding</a></p>
+                  <p data-aos="fade-up" data-aos-delay="300"><a href="/admin/domainPage" class="btn btn-primary py-3 px-5 btn-pill">Add Domain for Interview Questions</a></p>
 
                 </div>
 
