--- a/views/interviewSubject.ejs
+++ b/views/interviewSubject.ejs
@@ -69,7 +69,7 @@
             </nav>
           </div>
 
-          <div class="ml-auto w-25">
+          <div class="ml-auto w-10">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu main-menu site-menu-dark js-clone-nav mr-auto d-none d-lg-block m-0 p-0">
                 <li class="cta"><a href="#contact-section" class="nav-link"><span>Contact Us</span></a></li>
@@ -113,19 +113,21 @@
         </style>
         
         <div class="row" style="margin-top: -50px;" data-aos="fade-up" data-aos-delay="">
-            <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background-color:white;box-shadow: 1px 1px 10px 1px; ">
+          <%domainData.forEach((domainObj)=>{%> 
+          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background-color:white;box-shadow: 1px 1px 10px 1px; ">
               <a href="/interviewQuestions">
               <h5 class="text-black pt-3">
                 <img src="images/interviewlogo.jpg" style="margin-left: 16%;height: 100%; width:15%" alt="">
-                <strong>Mern Stack</strong> <br><br>
+                <strong><%=domainObj.domainTitle%></strong> <br><br>
                 <p style="margin: 0% 16%;font-size: 16px;text-align:justify;">
-                  Helps you to crack Interviews of any MNC and make you ready to work in Corporate Environment.
+                  <%=domainObj.domainDescription%>  
                 </p>
                 <br>
               </h5>
               </a>
             </div>
-          <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background-color:white;box-shadow: 1px 1px 10px 1px;">
+          <%})%>
+            <!-- <div id="intQ" class="col-md-5 col-lg-3" style="margin:4%;border-radius:10px;background-color:white;box-shadow: 1px 1px 10px 1px;">
             <a href="/interviewQuestions">
             <h5 class="text-black pt-3">
               <img src="images/interviewlogo.jpg" style="margin-left: 16%;height: 100%; width:15%" alt="">
@@ -223,6 +225,7 @@
             </h5>
             </a>
           </div>
+           -->
         </div>
       </div>
     </div>
